@@ -32,15 +32,12 @@ public final class UbicacionControllerREST {
     // GET handlers
     @GetMapping
     public List<UbicacionDTO> getUbicaciones(@RequestParam(required = false) TipoUbicacion tipo) {
-        Stream<Ubicacion> stream = ubicacionService.recuperarTodos().stream();
-
-        if (tipo != null) {
-            stream = stream.filter(ubicacion -> ubicacion.getTipo() == tipo);
-        }
-
-        return stream
-                .map(UbicacionDTO::desdeModelo)
-                .collect(Collectors.toList());
+        var ubicaciones = switch (tipo) {
+            case SANTUARIO -> ubicacionService.recuperarSantuarios();
+            case CEMENTERIO -> ubicacionService.recuperarCementerios();
+            case null -> ubicacionService.recuperarTodos();
+        };
+        return ubicaciones.stream().map(UbicacionDTO::desdeModelo).toList();
     }
 
     @GetMapping("/{id}")
@@ -76,13 +73,9 @@ public final class UbicacionControllerREST {
 
     @PutMapping("/{id}")
     public ResponseEntity<UbicacionDTO> actualizarUbicacion(@PathVariable Long id, @Valid @RequestBody UpdateUbicacionDTO dto) {
-
         Ubicacion ubicacion = ubicacionService.recuperar(id).orElseThrow(() -> new UbicacionNoEncontradaException(id));
-
         dto.actualizarModelo(ubicacion); // actualiza los atributos de Ubicación
-
         Ubicacion guardada = ubicacionService.actualizar(ubicacion);
-
         return ResponseEntity.ok(UbicacionDTO.desdeModelo(guardada));
     }
 
@@ -90,8 +83,6 @@ public final class UbicacionControllerREST {
     //DELETE handlers
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> eliminar(@PathVariable Long id){
-        ubicacionService.recuperar(id).orElseThrow(() -> new UbicacionNoEncontradaException(id));
-
         ubicacionService.eliminar(id);
         return ResponseEntity.noContent().build();
     }
